--- a/public/header.html
+++ b/public/header.html
@@ -3,12 +3,12 @@
   <h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="BIIR"/></a></h1>
   <nav id="nav"><a href="#" class="nav-toggle-btn"><span> </span><span> </span><span> </span></a>
     <ul>
-      <li><a href="">About</a></li>
-      <li><a href="">Services</a></li>
-      <li><a href="">Work</a></li>
-      <li><a href="">Team</a></li>
-      <li><a href="">Contact</a></li>
-      <li><a href="">Job</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="work.html">Work</a></li>
+      <li><a href="team.html">Team</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="job.html">Job</a></li>
     </ul>
   </nav>
   <!-- #nav-->
