--- a/public/about.html
+++ b/public/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>BIIR - learn Engineering. About</title>
     <meta charset="utf-8">
-    <title>BIIR - learn Engineering</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.ico">
