add footer at bottom, change menu show effect

--- a/public/services.html
+++ b/public/services.html
@@ -70,7 +70,9 @@
         <!-- .services-box-->
       </section>
       <!-- .middle-->
-      <footer id="footer">
+    </div>
+    <footer id="footer">
+      <div class="footer-holder">
         <div class="holder">
           <ul class="footer-info-list">
             <li>BIIR - Lean Engineering - Denmark</li>
@@ -88,8 +90,8 @@
             </li>
           </ul><strong class="logo"><a href="index.html"><img src="images/logo-footer.png" alt="BIIR"></a></strong>
         </div>
-      </footer>
-      <!-- #footer-->
-    </div>
+      </div>
+    </footer>
+    <!-- #footer-->
   </body>
 </html>
