--- a/public/contact.html
+++ b/public/contact.html
@@ -69,7 +69,9 @@
         <!-- .contact-box-->
       </section>
       <!-- .middle-->
-      <footer id="footer">
+    </div>
+    <footer id="footer">
+      <div class="footer-holder">
         <div class="holder">
           <ul class="footer-info-list">
             <li>BIIR - Lean Engineering - Denmark</li>
@@ -87,8 +89,8 @@
             </li>
           </ul><strong class="logo"><a href="index.html"><img src="images/logo-footer.png" alt="BIIR"></a></strong>
         </div>
-      </footer>
-      <!-- #footer-->
-    </div>
+      </div>
+    </footer>
+    <!-- #footer-->
   </body>
 </html>
