--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,11 @@
       </header>
       <!-- .header-->
       <div class="promo-logo-holder"><img src="images/main-promo-logo.png" alt="BIIR - Let's work together. Design and Engineering"></div>
-      <footer id="footer">
+      <!-- .promo-logo-holder-->
+    </div>
+    <!-- .wrapper-->
+    <footer id="footer">
+      <div class="footer-holder">
         <div class="holder">
           <ul class="footer-info-list">
             <li>BIIR - Lean Engineering - Denmark</li>
@@ -46,9 +50,8 @@
             </li>
           </ul><strong class="logo"><a href="index.html"><img src="images/logo-footer.png" alt="BIIR"></a></strong>
         </div>
-      </footer>
-      <!-- #footer-->
-    </div>
-    <!-- .wrapper-->
+      </div>
+    </footer>
+    <!-- #footer-->
   </body>
 </html>
