--- a/public/job.html
+++ b/public/job.html
@@ -39,7 +39,9 @@
         <p>Info on how to apply is included in the job description.</p><br><br><br>
       </section>
       <!-- .middle-->
-      <footer id="footer">
+    </div>
+    <footer id="footer">
+      <div class="footer-holder">
         <div class="holder">
           <ul class="footer-info-list">
             <li>BIIR - Lean Engineering - Denmark</li>
@@ -57,8 +59,8 @@
             </li>
           </ul><strong class="logo"><a href="index.html"><img src="images/logo-footer.png" alt="BIIR"></a></strong>
         </div>
-      </footer>
-      <!-- #footer-->
-    </div>
+      </div>
+    </footer>
+    <!-- #footer-->
   </body>
 </html>
