--- a/public/about.html
+++ b/public/about.html
@@ -16,7 +16,7 @@
         <h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="BIIR"></a></h1>
         <nav id="nav"><a href="#" class="nav-toggle-btn"><span> </span><span> </span><span> </span></a>
           <ul>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html" class="active">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="team.html">Team</a></li>
