--- a/public/contact.html
+++ b/public/contact.html
@@ -20,7 +20,7 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="team.html">Team</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
             <li><a href="job.html">Job</a></li>
           </ul>
         </nav>
