--- a/public/work.html
+++ b/public/work.html
@@ -18,7 +18,7 @@
           <ul>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="work.html">Work</a></li>
+            <li><a href="work.html" class="active">Work</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="job.html">Job</a></li>
