--- a/public/job.html
+++ b/public/job.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BIIR - learn Engineering. Job</title>
+    <title>BIIR - learn Engineering | Job</title>
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
