--- a/public/job.html
+++ b/public/job.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Job | BIIR</title>
+    <title>BIIR - Learn Engineering | Job</title>
     <meta charset="utf-8">
     <meta name="description" itemprop="description" content="BIIR is a a multidisciplinary team of engineers, project managers and designers working together as one powerful and very flexible unit.">
-    <meta name="keywords" content="BIIR, engineering, engineering, consultants, konsulenter, wind energy, project managers, designers, production technology, production development, quality, ingeniør">
+    <meta name="keywords" content="BIIR, Jonas Bojer, engineering, consultants, konsulenter, wind energy, ingeniør, project management, design, production development, quality">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.ico">
     <link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css">
