Update public page

--- a/public/work.html
+++ b/public/work.html
@@ -3,7 +3,7 @@
   <head>
     <title>BIIR - Learn Engineering | Work</title>
     <meta charset="utf-8">
-    <meta name="description" itemprop="description" content="BIIR is a a multidisciplinary team of engineers, project managers and designers working together as one powerful and very flexible unit.">
+    <meta name="description" itemprop="description" content="BIIR is a multidisciplinary team of engineers, project managers and designers working together as one powerful and very flexible unit">
     <meta name="keywords" content="BIIR, Jonas Bojer, engineering, consultants, konsulenter, wind energy, ingeniør, project management, design, production development, quality">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.ico">
