Update public pages

--- a/public/team.html
+++ b/public/team.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BIIR - Learn Engineering | Team</title>
+    <title>BIIR - Lean Engineering | Team</title>
     <meta charset="utf-8">
     <meta name="description" itemprop="description" content="BIIR is a multidisciplinary team of engineers, project managers and designers working together as one powerful and very flexible unit">
     <meta name="keywords" content="BIIR, Jonas Bojer, engineering, consultants, konsulenter, wind energy, ingeniør, project management, design, production development, quality">
