update content paddings, team page and header menu aligment

--- a/public/team.html
+++ b/public/team.html
@@ -33,114 +33,116 @@
       <section class="middle">
         <h2>At BIIR,<span class="blue"> our people</span> are our strongest asset</h2>
         <p>We consist of a growing multidisciplinary group of engineers, program managers and designers working together as one powerful and very flexible unit.</p>
-        <div class="team-box">
-          <div class="l-holder">
-            <div class="l-150-fx">
-              <form action="#" method="">
-                <fieldset>
-                  <label for="search-f">Search</label>
-                  <input id="search-f" type="text" placeholder="Name Surname">
-                </fieldset>
-              </form>
-            </div>
-            <div class="l-90-fl">
-              <ul class="team-list">
-                <li><img src="images/faces/Aleksey-Pashentlev.jpg" alt=""></li>
-                <li><img src="images/faces/Alexandr-Shapoval.jpg" alt=""></li>
-                <li><img src="images/faces/Andrey-Tanchenko.jpg" alt=""></li>
-                <li><img src="images/faces/Andrii-Iakymovych.jpg" alt=""></li>
-                <li><img src="images/faces/Anna-Golieva.jpg" alt=""></li>
-                <li><img src="images/faces/Anna-Golovko.jpg" alt=""></li>
-                <li><img src="images/faces/Annette-Kjaergaard.jpg" alt=""></li>
-                <li><img src="images/faces/Artem-Kuchko.jpg" alt=""></li>
-                <li><img src="images/faces/Benny-Kolbeck-Ensted.jpg" alt=""></li>
-                <li><img src="images/faces/Bjarke-Bertel-Krarup.jpg" alt=""></li>
-                <li><img src="images/faces/Bjarke-Harbo-Jakobsen.jpg" alt=""></li>
-                <li><img src="images/faces/Christian-Mark-Nielsen.jpg" alt=""></li>
-                <li><img src="images/faces/Christian-Munk.jpg" alt=""></li>
-                <li><img src="images/faces/Claus-Burchardt.jpg" alt=""></li>
-                <li><img src="images/faces/Dennis-Damborg-Hansen.jpg" alt=""></li>
-                <li><img src="images/faces/Dennis-Lykke-Larsen.jpg" alt=""></li>
-                <li><img src="images/faces/Denys-Gorlov.jpg" alt=""></li>
-                <li><img src="images/faces/Dinara-Akzhygitova.jpg" alt=""></li>
-                <li><img src="images/faces/Dmitry-Tsurkan.jpg" alt=""></li>
-                <li><img src="images/faces/Dmytro-Sava.jpg" alt=""></li>
-                <li><img src="images/faces/Esben-Eskerod-Ifversen.jpg" alt=""></li>
-                <li><img src="images/faces/Esben-Ostergaard-Kjeldsen.jpg" alt=""></li>
-                <li><img src="images/faces/Eugene-Plokhotnyk.jpg" alt=""></li>
-                <li><img src="images/faces/Flemming-Balle-Hansen.jpg" alt=""></li>
-                <li><img src="images/faces/Henrik-Doering-Damm-Reuther.jpg" alt=""></li>
-                <li><img src="images/faces/Henrik-Lovschal.jpg" alt=""></li>
-                <li><img src="images/faces/Henrik-Riis-Jacobsen.jpg" alt=""></li>
-                <li><img src="images/faces/Henrik-Svenstrup-Kristensen.jpg" alt=""></li>
-                <li><img src="images/faces/Henrik-Timm-Sorensen.jpg" alt=""></li>
-                <li><img src="images/faces/Iben-Hoiris-Overgaard.jpg" alt=""></li>
-                <li><img src="images/faces/Ida-Marie-Bundgaard.jpg" alt=""></li>
-                <li><img src="images/faces/Ievgen-Peleshko.jpg" alt=""></li>
-                <li><img src="images/faces/Igor-Nepran.jpg" alt=""></li>
-                <li><img src="images/faces/Igor-Riva.jpg" alt=""></li>
-                <li><img src="images/faces/Iryna-Bilokopytova.jpg" alt=""></li>
-                <li><img src="images/faces/Iryna-Chernenko.jpg" alt=""></li>
-                <li><img src="images/faces/Iurii-Zaitsev.jpg" alt=""></li>
-                <li><img src="images/faces/Ivan-Yermak.jpg" alt=""></li>
-                <li><img src="images/faces/Jan-Hornbech.jpg" alt=""></li>
-                <li><img src="images/faces/Jan-Ipsen.jpg" alt=""></li>
-                <li><img src="images/faces/Jan-Magnus-Nielsen.jpg" alt=""></li>
-                <li><img src="images/faces/Jann-Olesen.jpg" alt=""></li>
-                <li><img src="images/faces/Jens-Jacob-Troensegaard.jpg" alt=""></li>
-                <li><img src="images/faces/Jeppe-Molbach-Mortensen.jpg" alt=""></li>
-                <li><img src="images/faces/John-Bech.jpg" alt=""></li>
-                <li><img src="images/faces/John-Keldgaard-Grevsen.jpg" alt=""></li>
-                <li><img src="images/faces/Jonas-Bilberg-Juhl.jpg" alt=""></li>
-                <li><img src="images/faces/Jonas-Bojer-Christensen.jpg" alt=""></li>
-                <li><img src="images/faces/Kasper-Moberg.jpg" alt=""></li>
-                <li><img src="images/faces/Katrine-Elsig-Mortensen.jpg" alt=""></li>
-                <li><img src="images/faces/Katrine-Elsig-Mortensen.jpg" alt=""></li>
-                <li><img src="images/faces/Konstiantyn-Trunin.jpg" alt=""></li>
-                <li><img src="images/faces/Lars-Hoy.jpg" alt=""></li>
-                <li><img src="images/faces/Lars-Kjaergaard-Lorentzen.jpg" alt=""></li>
-                <li><img src="images/faces/Lars-Lund-Thomsen.jpg" alt=""></li>
-                <li><img src="images/faces/Lars-Vinther-Kappel.jpg" alt=""></li>
-                <li><img src="images/faces/Leif-Borup-Hansen.jpg" alt=""></li>
-                <li><img src="images/faces/Lene-Laesoe.jpg" alt=""></li>
-                <li><img src="images/faces/Lilian-Nielsen.jpg" alt=""></li>
-                <li><img src="images/faces/Mads-Beck-Olsen.jpg" alt=""></li>
-                <li><img src="images/faces/Malene-Bartens.jpg" alt=""></li>
-                <li><img src="images/faces/Martin-Jerga.jpg" alt=""></li>
-                <li><img src="images/faces/Martin-Kjargard-Nielsen.jpg" alt=""></li>
-                <li><img src="images/faces/Mette-Vestergaard-Christensen.jpg" alt=""></li>
-                <li><img src="images/faces/Michael-Hjort-Rasmussen.jpg" alt=""></li>
-                <li><img src="images/faces/Morten-Morkholt.jpg" alt=""></li>
-                <li><img src="images/faces/Morten-Simonsen.jpg" alt=""></li>
-                <li><img src="images/faces/Nermin-Omerovic.jpg" alt=""></li>
-                <li><img src="images/faces/Nicole-Lajgaard-Solgaard.jpg" alt=""></li>
-                <li><img src="images/faces/Ole-Krarup.jpg" alt=""></li>
-                <li><img src="images/faces/Oleksandr-Zagnoi.jpg" alt=""></li>
-                <li><img src="images/faces/Oleksii-Tolochko.jpg" alt=""></li>
-                <li><img src="images/faces/Olga-Kii.jpg" alt=""></li>
-                <li><img src="images/faces/Olga-Latysh.jpg" alt=""></li>
-                <li><img src="images/faces/Per-Krarup.jpg" alt=""></li>
-                <li><img src="images/faces/Peter-Skov-Hansen.jpg" alt=""></li>
-                <li><img src="images/faces/Pezhman-Nakhost.jpg" alt=""></li>
-                <li><img src="images/faces/Rasmus-Hovgaard.jpg" alt=""></li>
-                <li><img src="images/faces/Rasmus-Sanderhoff-Johansen.jpg" alt=""></li>
-                <li><img src="images/faces/Rene-Sloth-Jensen.jpg" alt=""></li>
-                <li><img src="images/faces/Ricco-Aagaard.jpg" alt=""></li>
-                <li><img src="images/faces/Sergii-Grytsan.jpg" alt=""></li>
-                <li><img src="images/faces/Sergii-Khalchenko.jpg" alt=""></li>
-                <li><img src="images/faces/Soren-Grandjean-Thrane.jpg" alt=""></li>
-                <li><img src="images/faces/Stefan-Moberg.jpg" alt=""></li>
-                <li><img src="images/faces/Stine-Bech-Aakerlund.jpg" alt=""></li>
-                <li><img src="images/faces/Svend-Ove-Edemann.jpg" alt=""></li>
-                <li><img src="images/faces/Thomas-Astrup.jpg" alt=""></li>
-                <li><img src="images/faces/Thomas-Overgaard-Joergensen.jpg" alt=""></li>
-                <li><img src="images/faces/Thomas-Sillesen.jpg" alt=""></li>
-                <li><img src="images/faces/Troels-Vilsgaard-Jakobsen.jpg" alt=""></li>
-                <li><img src="images/faces/Viacheslav-Korniienko.jpg" alt=""></li>
-                <li><img src="images/faces/Vitaliy-Smirnov.jpg" alt=""></li>
-                <li><img src="images/faces/Volodymyr-Maksymiuk.jpg" alt=""></li>
-                <li><img src="images/faces/Yevhenii-Davydenko.jpg" alt=""></li>
-              </ul>
+        <div class="team-box-holder">
+          <div class="team-box">
+            <div class="l-holder">
+              <div class="l-150-fx">
+                <form action="#" method="">
+                  <fieldset>
+                    <label for="search-f">Search</label>
+                    <input id="search-f" type="text" placeholder="Name Surname">
+                  </fieldset>
+                </form>
+              </div>
+              <div class="l-90-fl">
+                <ul class="team-list">
+                  <li><img src="images/faces/Aleksey-Pashentlev.jpg" alt=""></li>
+                  <li><img src="images/faces/Alexandr-Shapoval.jpg" alt=""></li>
+                  <li><img src="images/faces/Andrey-Tanchenko.jpg" alt=""></li>
+                  <li><img src="images/faces/Andrii-Iakymovych.jpg" alt=""></li>
+                  <li><img src="images/faces/Anna-Golieva.jpg" alt=""></li>
+                  <li><img src="images/faces/Anna-Golovko.jpg" alt=""></li>
+                  <li><img src="images/faces/Annette-Kjaergaard.jpg" alt=""></li>
+                  <li><img src="images/faces/Artem-Kuchko.jpg" alt=""></li>
+                  <li><img src="images/faces/Benny-Kolbeck-Ensted.jpg" alt=""></li>
+                  <li><img src="images/faces/Bjarke-Bertel-Krarup.jpg" alt=""></li>
+                  <li><img src="images/faces/Bjarke-Harbo-Jakobsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Christian-Mark-Nielsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Christian-Munk.jpg" alt=""></li>
+                  <li><img src="images/faces/Claus-Burchardt.jpg" alt=""></li>
+                  <li><img src="images/faces/Dennis-Damborg-Hansen.jpg" alt=""></li>
+                  <li><img src="images/faces/Dennis-Lykke-Larsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Denys-Gorlov.jpg" alt=""></li>
+                  <li><img src="images/faces/Dinara-Akzhygitova.jpg" alt=""></li>
+                  <li><img src="images/faces/Dmitry-Tsurkan.jpg" alt=""></li>
+                  <li><img src="images/faces/Dmytro-Sava.jpg" alt=""></li>
+                  <li><img src="images/faces/Esben-Eskerod-Ifversen.jpg" alt=""></li>
+                  <li><img src="images/faces/Esben-Ostergaard-Kjeldsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Eugene-Plokhotnyk.jpg" alt=""></li>
+                  <li><img src="images/faces/Flemming-Balle-Hansen.jpg" alt=""></li>
+                  <li><img src="images/faces/Henrik-Doering-Damm-Reuther.jpg" alt=""></li>
+                  <li><img src="images/faces/Henrik-Lovschal.jpg" alt=""></li>
+                  <li><img src="images/faces/Henrik-Riis-Jacobsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Henrik-Svenstrup-Kristensen.jpg" alt=""></li>
+                  <li><img src="images/faces/Henrik-Timm-Sorensen.jpg" alt=""></li>
+                  <li><img src="images/faces/Iben-Hoiris-Overgaard.jpg" alt=""></li>
+                  <li><img src="images/faces/Ida-Marie-Bundgaard.jpg" alt=""></li>
+                  <li><img src="images/faces/Ievgen-Peleshko.jpg" alt=""></li>
+                  <li><img src="images/faces/Igor-Nepran.jpg" alt=""></li>
+                  <li><img src="images/faces/Igor-Riva.jpg" alt=""></li>
+                  <li><img src="images/faces/Iryna-Bilokopytova.jpg" alt=""></li>
+                  <li><img src="images/faces/Iryna-Chernenko.jpg" alt=""></li>
+                  <li><img src="images/faces/Iurii-Zaitsev.jpg" alt=""></li>
+                  <li><img src="images/faces/Ivan-Yermak.jpg" alt=""></li>
+                  <li><img src="images/faces/Jan-Hornbech.jpg" alt=""></li>
+                  <li><img src="images/faces/Jan-Ipsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Jan-Magnus-Nielsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Jann-Olesen.jpg" alt=""></li>
+                  <li><img src="images/faces/Jens-Jacob-Troensegaard.jpg" alt=""></li>
+                  <li><img src="images/faces/Jeppe-Molbach-Mortensen.jpg" alt=""></li>
+                  <li><img src="images/faces/John-Bech.jpg" alt=""></li>
+                  <li><img src="images/faces/John-Keldgaard-Grevsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Jonas-Bilberg-Juhl.jpg" alt=""></li>
+                  <li><img src="images/faces/Jonas-Bojer-Christensen.jpg" alt=""></li>
+                  <li><img src="images/faces/Kasper-Moberg.jpg" alt=""></li>
+                  <li><img src="images/faces/Katrine-Elsig-Mortensen.jpg" alt=""></li>
+                  <li><img src="images/faces/Katrine-Elsig-Mortensen.jpg" alt=""></li>
+                  <li><img src="images/faces/Konstiantyn-Trunin.jpg" alt=""></li>
+                  <li><img src="images/faces/Lars-Hoy.jpg" alt=""></li>
+                  <li><img src="images/faces/Lars-Kjaergaard-Lorentzen.jpg" alt=""></li>
+                  <li><img src="images/faces/Lars-Lund-Thomsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Lars-Vinther-Kappel.jpg" alt=""></li>
+                  <li><img src="images/faces/Leif-Borup-Hansen.jpg" alt=""></li>
+                  <li><img src="images/faces/Lene-Laesoe.jpg" alt=""></li>
+                  <li><img src="images/faces/Lilian-Nielsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Mads-Beck-Olsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Malene-Bartens.jpg" alt=""></li>
+                  <li><img src="images/faces/Martin-Jerga.jpg" alt=""></li>
+                  <li><img src="images/faces/Martin-Kjargard-Nielsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Mette-Vestergaard-Christensen.jpg" alt=""></li>
+                  <li><img src="images/faces/Michael-Hjort-Rasmussen.jpg" alt=""></li>
+                  <li><img src="images/faces/Morten-Morkholt.jpg" alt=""></li>
+                  <li><img src="images/faces/Morten-Simonsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Nermin-Omerovic.jpg" alt=""></li>
+                  <li><img src="images/faces/Nicole-Lajgaard-Solgaard.jpg" alt=""></li>
+                  <li><img src="images/faces/Ole-Krarup.jpg" alt=""></li>
+                  <li><img src="images/faces/Oleksandr-Zagnoi.jpg" alt=""></li>
+                  <li><img src="images/faces/Oleksii-Tolochko.jpg" alt=""></li>
+                  <li><img src="images/faces/Olga-Kii.jpg" alt=""></li>
+                  <li><img src="images/faces/Olga-Latysh.jpg" alt=""></li>
+                  <li><img src="images/faces/Per-Krarup.jpg" alt=""></li>
+                  <li><img src="images/faces/Peter-Skov-Hansen.jpg" alt=""></li>
+                  <li><img src="images/faces/Pezhman-Nakhost.jpg" alt=""></li>
+                  <li><img src="images/faces/Rasmus-Hovgaard.jpg" alt=""></li>
+                  <li><img src="images/faces/Rasmus-Sanderhoff-Johansen.jpg" alt=""></li>
+                  <li><img src="images/faces/Rene-Sloth-Jensen.jpg" alt=""></li>
+                  <li><img src="images/faces/Ricco-Aagaard.jpg" alt=""></li>
+                  <li><img src="images/faces/Sergii-Grytsan.jpg" alt=""></li>
+                  <li><img src="images/faces/Sergii-Khalchenko.jpg" alt=""></li>
+                  <li><img src="images/faces/Soren-Grandjean-Thrane.jpg" alt=""></li>
+                  <li><img src="images/faces/Stefan-Moberg.jpg" alt=""></li>
+                  <li><img src="images/faces/Stine-Bech-Aakerlund.jpg" alt=""></li>
+                  <li><img src="images/faces/Svend-Ove-Edemann.jpg" alt=""></li>
+                  <li><img src="images/faces/Thomas-Astrup.jpg" alt=""></li>
+                  <li><img src="images/faces/Thomas-Overgaard-Joergensen.jpg" alt=""></li>
+                  <li><img src="images/faces/Thomas-Sillesen.jpg" alt=""></li>
+                  <li><img src="images/faces/Troels-Vilsgaard-Jakobsen.jpg" alt=""></li>
+                  <li><img src="images/faces/Viacheslav-Korniienko.jpg" alt=""></li>
+                  <li><img src="images/faces/Vitaliy-Smirnov.jpg" alt=""></li>
+                  <li><img src="images/faces/Volodymyr-Maksymiuk.jpg" alt=""></li>
+                  <li><img src="images/faces/Yevhenii-Davydenko.jpg" alt=""></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
