Update team page

--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
   <head>
     <title>BIIR - Lean Engineering | Contact</title>
     <meta charset="utf-8">
-    <meta name="description" itemprop="description" content="BIIR is a multidisciplinary team of engineers, project managers and designers working together as one powerful and very flexible unit">
+    <meta name="description" itemprop="description" content="BIIR is a multidisciplinary team of engineers, project managers and designers working together as one powerful and very flexible unit to help our customers">
     <meta name="keywords" content="BIIR, Jonas Bojer, engineering, consultants, konsulenter, wind energy, ingeniør, project management, design, production development, quality">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.ico">
@@ -30,7 +30,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html">Work</a></li>
-            <li><a href="offices.html">Offices</a></li>
+            <li><a href="officials.html">Officials</a></li>
             <li><a href="contact.html" class="active">Contact</a></li>
             <li><a href="job.html">Job</a></li>
           </ul>
