--- a/public/offices.html
+++ b/public/offices.html
@@ -32,7 +32,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html">Work</a></li>
-            <li><a href="offices.html" class="active">Offices</a></li>
+            <li><a href="offices.html" class="active">Officials</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="job.html">Job</a></li>
           </ul>
