--- a/public/officials.html
+++ b/public/officials.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BIIR - Lean Engineering</title>
+    <title>BIIR - Lean Engineering | Officials</title>
     <meta charset="utf-8">
     <meta name="description" itemprop="description" content="BIIR is a multidisciplinary team of engineers, project managers and designers working together as one powerful and very flexible unit to help our customers">
     <meta name="keywords" content="BIIR, Jonas Bojer, engineering, consultants, konsulenter, wind energy, ingeniør, project management, design, production development, quality">
@@ -20,9 +20,11 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    <script type="text/javascript" src="js/team.js"></script>
   </head>
   <body>
     <div class="wrapper">
+      <script>var teamJSON = '{"BiirTeam":{"Employee":[{"id":"jbc","fname":"Jonas Bojer","sname":"Christensen","image":"Jonas Bojer Christensen.png","Skill":["Not set","Mechanical"]},{"id":"eei","fname":"Esben Eskerod","sname":"Ifversen","image":"Esben Eskerod Ifversen.png","Skill":["Not set","Mechanical"]},{"id":"dia","fname":"Dinara","sname":"Akzhygitova","image":"Dinara Akzhygitova.png","Skill":["Not set","Administration"]},{"id":"ts","fname":"Thomas","sname":"Sillesen","image":"Thomas Sillesen.png","Skill":["Not set","administration"]},{"id":"nls","fname":"Nicole Lajgaard","sname":"Solgaard","image":"Nicole Lajgaard Solgaard.png","Skill":["Not set","administration"]}]}}';</script>
       <header id="header">
         <h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="BIIR"></a></h1>
         <nav id="nav"><a href="#" class="nav-toggle-btn"><span> </span><span> </span><span> </span></a>
@@ -30,7 +32,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html">Work</a></li>
-            <li><a href="officials.html">Officials</a></li>
+            <li><a href="officials.html" class="active">Officials</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="job.html">Job</a></li>
           </ul>
@@ -38,10 +40,30 @@
         <!-- #nav-->
       </header>
       <!-- .header-->
-      <div class="promo-logo-holder"><img src="images/main-promo-logo.png" alt="BIIR - Let's work together. Design and Engineering"></div>
-      <!-- .promo-logo-holder-->
+      <section class="middle">
+        <h2>At BIIR, <span class="blue">our customers</span> are our strongest asset</h2>
+        <p>We consist of a growing multidisciplinary group of engineers, program managers and designers working together as one powerful and very flexible unit to help our customers.</p>
+        <div class="team-box-holder">
+          <div class="team-box">
+            <div class="l-holder">
+              <div class="l-150-fx">
+                <form action="#" method="">
+                  <fieldset>
+                    <label for="search-f">Search</label>
+                    <input id="search-f" type="text" placeholder="Name Surname">
+                  </fieldset>
+                </form>
+              </div>
+              <div class="l-90-fl">
+                <ul class="team-list"></ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- .team-box-->
+      </section>
+      <!-- .middle-->
     </div>
-    <!-- .wrapper-->
     <footer id="footer">
       <div class="footer-holder">
         <div class="holder">
