--- a/public/office.html
+++ b/public/office.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BIIR - Lean Engineering | Contact</title>
+    <title>BIIR - Lean Engineering | Office</title>
     <meta charset="utf-8">
     <meta name="description" itemprop="description" content="BIIR is a multidisciplinary team of engineers, project managers and designers working together as one powerful and very flexible unit to help our customers">
     <meta name="keywords" content="BIIR, Jonas Bojer, engineering, consultants, konsulenter, wind energy, ingeniør, project management, design, production development, quality">
@@ -20,9 +20,11 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    <script type="text/javascript" src="js/team.js"></script>
   </head>
   <body>
     <div class="wrapper">
+      <script>var teamJSON = '{"BiirTeam":{"Employee":[{"id":"jbc","fname":"Jonas Bojer","sname":"Christensen","image":"Jonas Bojer Christensen.png","Skill":["Not set","Mechanical"]},{"id":"eei","fname":"Esben Eskerod","sname":"Ifversen","image":"Esben Eskerod Ifversen.png","Skill":["Not set","Mechanical"]},{"id":"dia","fname":"Dinara","sname":"Akzhygitova","image":"Dinara Akzhygitova.png","Skill":["Not set","Administration"]},{"id":"ts","fname":"Thomas","sname":"Sillesen","image":"Thomas Sillesen.png","Skill":["Not set","administration"]},{"id":"nls","fname":"Nicole Lajgaard","sname":"Solgaard","image":"Nicole Lajgaard Solgaard.png","Skill":["Not set","administration"]}]}}';</script>
       <header id="header">
         <h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="BIIR"></a></h1>
         <nav id="nav"><a href="#" class="nav-toggle-btn"><span> </span><span> </span><span> </span></a>
@@ -30,8 +32,8 @@
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html">Work</a></li>
-            <li><a href="office.html">Office</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li>
+            <li><a href="office.html" class="active">Office</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="job.html">Job</a></li>
           </ul>
         </nav>
@@ -39,45 +41,26 @@
       </header>
       <!-- .header-->
       <section class="middle">
-        <h2>Interested in<span class="blue"> growing your business?</span></h2>
-        <p>We have established a strong team of amazingly talented designers and engineers, specializing in a close collaboration with our clients, usually working directly from their offices as integrated team members. We can bring a project from first idea generation to market launch.</p>
-        <p>Get in touch to find out how we can help develop your business.</p>
-        <div class="contact-box">
-          <h3>BIIR</h3>
-          <address>Holger Drachmanns vej 9<br>8000 Århus C<br>Denmark</address>
+        <h2>At BIIR, <span class="blue">our customers</span> are our strongest asset</h2>
+        <p>We consist of a growing multidisciplinary group of engineers, program managers and designers working together as one powerful and very flexible unit to help our customers.</p>
+        <div class="team-box-holder">
+          <div class="team-box">
+            <div class="l-holder">
+              <div class="l-150-fx">
+                <form action="#" method="">
+                  <fieldset>
+                    <label for="search-f">Search</label>
+                    <input id="search-f" type="text" placeholder="Name Surname">
+                  </fieldset>
+                </form>
+              </div>
+              <div class="l-90-fl">
+                <ul class="team-list"></ul>
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- .contact-box-->
-        <div class="contact-box">
-          <h4>Visiting address:</h4>
-          <address>Dusager 10<br>8200 Århus N<br>Denmark</address>
-        </div>
-        <!-- .contact-box-->
-        <div class="contact-box">
-          <h4>Other sites:</h4>
-          <dl>
-            <dt>Denmark:</dt>
-            <dd>Esbjerg</dd>
-            <dt>Ukraine:</dt>
-            <dd>Odessa</dd>
-          </dl>
-        </div>
-        <!-- .contact-box-->
-        <div class="contact-box">
-          <dl>
-            <dt>Get in touch:</dt>
-            <dd><a href="mailto:&amp;#109;&amp;#097;&amp;#105;&amp;#108;&amp;#064;&amp;#098;&amp;#105;&amp;#105;&amp;#114;&amp;#046;&amp;#100;&amp;#107;">&#109;&#097;&#105;&#108;&#064;&#098;&#105;&#105;&#114;&#046;&#100;&#107;</a></dd>
-          </dl>
-        </div>
-        <!-- .contact-box-->
-        <div class="contact-box">
-          <dl>
-            <dt>
-              <h4>BIIR kontor:</h4>
-            </dt>
-            <dd><a href="tel:+4541770700" class="tel">+45 41 77 07 00</a></dd>
-          </dl>
-        </div>
-        <!-- .contact-box-->
+        <!-- .team-box-->
       </section>
       <!-- .middle-->
     </div>
