--- a/public/work.html
+++ b/public/work.html
@@ -30,7 +30,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html" class="active">Work</a></li>
-            <li><a href="officials.html">Officials</a></li>
+            <li><a href="office.html">Office</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="job.html">Job</a></li>
           </ul>
